--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
 DB_HOST=algorithmix-db
 DB_NAME=algorithmixdb
 DB_USER=SA
-DB_PASS=NnxQ89Bt9TeQy2dtnD3Qg2PM
+DB_PASS=__DB_PASSWORD__
 DB_PORT=1433
 
 MAIL_HOST=smtp.yandex.ru
 MAIL_PORT=587
-MAIL_CREDENTIALS_LOGIN=kb.algorithmix@yandex.com
-MAIL_CREDENTIALS_PASSWORD=__PASSWORD__
+MAIL_CREDENTIALS_LOGIN=__MAIL_LOGIN__
+MAIL_CREDENTIALS_PASSWORD=__MAIL_PASSWORD__
 
 CLIENT_URL=http://localhost:3000
 CLIENT_PORT=3000
